<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Calculator" >

    <EditText
        android:id="@+id/market_price"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_above="@+id/market_risk"
        android:layout_alignLeft="@+id/market_risk"
        android:layout_alignRight="@+id/market_risk"
        android:layout_marginBottom="22dp"
        android:ems="10"
        android:hint="@string/market_price"
        android:inputType="text" />

    <EditText
        android:id="@+id/stoploss_pips"
        android:layout_width="302dp"
        android:layout_height="51dp"
        android:layout_alignLeft="@+id/market_risk"
        android:layout_centerVertical="true"
        android:ems="10"
        android:hint="@string/stoploss_pips"
        android:inputType="number" />


    <Button
        android:id="@+id/button_calculate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/lot_size"
        android:layout_below="@+id/stoploss_pips"
        android:layout_marginLeft="106dp"
        android:layout_marginTop="18dp"
        android:text="@string/button_calculate"
        android:onClick="buttonClick" />

    <EditText
        android:id="@+id/market_risk"
        android:layout_width="299dp"
        android:layout_height="58dp"
        android:layout_above="@+id/stoploss_pips"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="14dp"
        android:layout_marginLeft="15dp"
        android:ems="10"
        android:hint="@string/market_risk"
        android:inputType="number" />

	<EditText
	    android:id="@+id/lot_size"
	    android:layout_width="299dp"
	    android:layout_height="58dp"
	    android:layout_below="@+id/button_calculate"
	    android:layout_centerHorizontal="true"
	    android:layout_marginTop="24dp"
	    android:ems="10"
	    android:hint="@string/lot_size"
	    android:inputType="text|numberDecimal" >

	    <requestFocus />
	</EditText>

</RelativeLayout>
